[package]
name = "cowsql-raft-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = { version = "0.69.1", default-features = false, optional = true, features = ["runtime"] }
cc = "1.0.90"
